<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Utils</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="edit_scheme">Enter the scheme (tel or sip)</string>
    <string name="edit_number">Enter a number</string>
    <string name="button_dial">Dial</string>
    <string name="button_call">Call</string>
    <string name="button_ptt_set">PTT Settings</string>
    <string name="button_sos_set">SOS Settings</string>
    <string name="button_phone_sip_setting">Phone SIP Setting</string>
    <string name="button_safetone_sip_setting">SafeTone SIP Setting</string>
    <string name="button_phone_sip_call">Phone SIP Call</string>
    
    <string name="button_ptt">PTT</string>
    <string name="button_ptt_stop">Stop PTT</string>
    <string name="button_sos">SOS</string>
    
    <string name="empty_description"></string>

</resources>
