<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edit_scheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_scheme" />

    <EditText
        android:id="@+id/edit_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_dial"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_dial" />

        <Button
            android:id="@+id/button_call"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_call" />
    </LinearLayout>

    <Button
        android:id="@+id/button_phone_sip_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_phone_sip_setting" />

    <Button
        android:id="@+id/button_safetone_sip_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_safetone_sip_setting" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_ptt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_ptt" />
        
        <Button
            android:id="@+id/button_ptt_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_ptt_stop" />
    </LinearLayout>
    
    <Button
        android:id="@+id/button_sos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_sos" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_ptt_set"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_ptt_set" />

        <Button
            android:id="@+id/button_sos_set"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_sos_set" />
    </LinearLayout>

</LinearLayout>